Set up start and result views

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">@color/Pawsona.Spot.Yellow</color>
+    <color name="colorPrimaryDark">@color/Pawsona.Text.Secondary</color>
+    <color name="colorAccent">@color/Pawsona.Text.Secondary</color>
+
+    
+    <color name="Pawsona.Spot.Yellow">#FFDE84</color>
+    <color name="Pawsona.Spot.Strawberry">#E43886</color>
+    <color name="Pawsona.Spot.Lavender">#8088F6</color>
+
+    <color name="Pawsona.Text.Primary">#1F1141</color>
+    <color name="Pawsona.Text.Secondary">#3D4589</color>
+    <color name="Pawsona.Text.Tertiary">#5B63AD</color>
+
+    <color name="Pawsona.Background.Medium">#D6DAF7</color>
+    <color name="Pawsona.Background.Soft">#E6E8F6</color>
 </resources>
