--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -9,4 +9,8 @@
         <attr name="metaButtonBarButtonStyle" format="reference" />
     </declare-styleable>
 
+    <declare-styleable name="PersonaInquiryTheme">
+        <attr name="personaBodyTextAppearance" format="reference" />
+        <attr name="personaTitleTextAppearance" format="reference" />
+    </declare-styleable>
 </resources>
