--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,10 +1,31 @@
 <resources>
-    <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">@color/Pawsona.Spot.Yellow</item>
+        <item name="colorPrimaryDark">@color/Pawsona.Text.Secondary</item>
+        <item name="colorAccent">@color/Pawsona.Text.Secondary</item>
+        <item name="android:textColor">@color/Pawsona.Text.Secondary</item>
+    </style>
+
+    <!-- Use default theme from Persona. -->
+    <style name="PersonaThemeDefault" parent="Persona.Inquiry.Theme"/>
+
+    <!-- Define a custom theme to be used. Colors and text appearances can be customized. -->
+    <style name="PersonaThemeCustom" parent="Persona.Inquiry.Theme">
+        <item name="colorPrimary">@color/Pawsona.Spot.Lavender</item>
+        <item name="colorPrimaryDark">@color/Pawsona.Text.Secondary</item>
+        <item name="colorAccent">@color/Pawsona.Spot.Yellow</item>
+
+        <item name="personaBodyTextAppearance">@style/PawsonaBodyTextAppearance</item>
+        <item name="personaTitleTextAppearance">@style/PawsonaTitleTextAppearance</item>
+    </style>
+    
+    <style name="PawsonaTitleTextAppearance" parent="Persona.Text.Title">
+        <item name="android:fontFamily">@font/longdrina_solid_regular</item>
+        <item name="android:textColor">@color/Pawsona.Text.Primary</item>
+    </style>
+
+    <style name="PawsonaBodyTextAppearance" parent="Persona.Text.Body">
+        <item name="android:fontFamily">@font/longdrina_solid_regular</item>
         <item name="android:textColor">@color/Pawsona.Text.Secondary</item>
     </style>
 </resources>
